debezium/dbz#2096 debezium CLI native build with `quarkus-picocli`
Signed-off-by: kmos <kmos@commonhaus.dev>